# privateQTL

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  alg.cpp  cmake_install.cmake  input.cpp  input.h  matmul.cpp  mpc  mpc.cpp  mpc.h  parseoutput.cpp  privateQTLII_preprocessing.cpp  privateQTL_cp.cpp  privateQTL_cp.h  privateQTL_mapping.cpp  residualizer.h  scenario1.cpp  scenario2.cpp  securesort  sharing.cpp  utils.cpp  utils.h
